tests/ui/anyiter.stderr
error: expected `,`
 --> tests/ui/anyiter.rs:4:30
  |
4 | pub fn any_str_len(s: AnyIter(AnyString)) -> Result<usize, anyhow::Error> {
  |                              ^
